packages/toi/test/fixtures/invalid/bad-semver.toi
{
  "$toi": "1.0",
  "$tier": "personal",
  "identity": {
    "author": "version not semver"
  }
}
